# openvox-webui

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  agents.md  build.rs  clippy.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.old  ci.yml  release.old  release.yml
config/: config.example.yaml  facter_templates.example.yaml  groups.example.yaml
config/schema/: config.schema.json  groups.schema.json
docs/: ALERT_RULES_CONDITIONS.md  BACKUP.md  CONFIGURATION.md  DEVELOPMENT.md  ENC_SETUP.md  INSTALLATION.md  NOTIFICATIONS.md  PUPPET_ENVIRONMENT_TROUBLESHOOTING.md  QUICK_START_GUIDES.md  TROUBLESHOOTING.md  UPGRADE.md  USER_GUIDE.md
docs/api/: ca.md
docs/architecture/: README.md
docs/implemented-features/: 01-project-setup.md  02-core-backend.md  03-rbac-foundation.md  04-testing-infrastructure.md  05-user-management.md  06-rbac-implementation.md  07-rbac-management.md  08-puppetdb-integration.md  09-caching-layer.md  10-puppetdb-api.md  11-puppet-ca-backend.md  12-ca-api-endpoints.md  13-node-classification.md  14-facter-integration.md  15-dashboard-visualization.md  16-configuration-management.md  17-ca-management-ui.md  18-advanced-features.md  19-production-readiness.md  README.md
docs/user-guide/: README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/: 20241216000001_initial.sql  20241216000002_rbac.sql  20241216000003_password_reset.sql  20241216000004_fix_admin_password.sql  20241216000005_force_password_change.sql  20241216000006_reporting.sql  20241217000001_alerting.sql  20241218000001_group_variables.sql  20251218000001_multitenancy.sql  20251218000002_super_admin.sql  20260105000001_code_deploy.sql  20260106000001_admin_super_admin_only.sql  20260106000002_saml_auth.sql  20260108000001_code_deploy_pat_support.sql  20260108000002_notifications.sql  20260109000001_code_pat_tokens.sql  20260112000001_pat_username.sql  20260113000001_server_backup.sql  20260114000001_node_removal_tracking.sql  20260115000001_environment_group.sql  20260116000001_match_all_nodes.sql  20260117000001_settings_table.sql  20260123000001_remove_default_channels.sql  20260319000001_phase10_inventory.sql  20260319000002_phase10_version_intelligence.sql  20260319000003_phase10_update_orchestration.sql  20260320000001_cve_vulnerability.sql  20260323000001_phase10_containers_users.sql  20260323100000_repo_config_tables.sql  20260407000001_catalog_os_version.sql  20260407000002_group_update_schedules.sql  20260415000001_auth_sessions.sql  20260520000001_report_daily_summary.sql  20260521000001_report_hourly_summary.sql  20260720000001_alert_rules_update_job_type.sql
migrations/inventory/: 0001_initial.sql
packaging/: README.md
packaging/default/: openvox-webui
packaging/rpm/: openvox-webui.spec
packaging/scripts/: classification-instructions.txt  configure-openvox-webui.sh
packaging/systemd/: openvox-webui.service
puppet/: .gitignore  CHANGELOG.md  README.md  metadata.json
puppet/data/: common.yaml
puppet/examples/: classification.pp  client.pp  enc_with_auth.pp  init.pp  with_puppetdb.pp  with_saml.pp
puppet/files/: openvox-enc-watchdog.service  openvox-enc-watchdog.timer
puppet/manifests/: auth.pp  classification.pp  client.pp  config.pp  enc.pp  init.pp  install.pp  service.pp
puppet/spec/: spec_helper.rb
puppet/templates/: ca.conf.epp  client.yaml.epp  config.yaml.epp  enc-watchdog.sh.epp  enc.sh.epp  puppetdb-auth.conf.epp  puppetserver-auth.conf.epp
puppet/test/: openvox_inventory_test.rb
scripts/: README.md  bootstrap-agent.ps1  bootstrap-agent.sh  build-packages.sh  bump-version.sh  create-test-notifications.sh  diagnose-node-classification.sh  diagnose-puppet-environment.sh  fix-code-deploy-config.sh  fix-puppet-environment.sh  publish-puppet-module.sh  setup-puppet-enc.sh  setup-report-scheduler.sh  test-node-classification.sh  test-notifications-and-enc.sh
src/: lib.rs  main.rs
src/api/: alerting.rs  analytics.rs  api_keys.rs  audit_logs.rs  auth.rs  backup.rs  bootstrap.rs  ca.rs  code_deploy.rs  cve.rs  facter.rs  facts.rs  groups.rs  health.rs  inventory.rs  mod.rs  node_removal.rs  nodes.rs  notifications.rs  organizations.rs  permissions.rs  query.rs  reports.rs  roles.rs  saml.rs  settings.rs  users.rs
src/config/: mod.rs
src/db/: alerting_repository.rs  api_key_repository.rs  audit_repository.rs  backup_repository.rs  code_deploy_repository.rs  cve_repository.rs  inventory_migration.rs  inventory_repository.rs  migrations.rs  mod.rs  node_removal_repository.rs  organization_repository.rs  report_summary_repository.rs  repository.rs  settings_repository.rs
src/handlers/: mod.rs
src/middleware/: auth.rs  client_cert.rs  mod.rs  rate_limit.rs  rbac.rs  security_headers.rs
src/models/: alerting.rs  analytics.rs  api_key.rs  audit.rs  backup.rs  certificate.rs  classification.rs  code_deploy.rs  cve.rs  fact.rs  group.rs  inventory.rs  mod.rs  node.rs  node_removal.rs  notification.rs  organization.rs  rbac.rs  report.rs  settings.rs  user.rs
src/services/: alerting.rs  auth.rs  backup.rs  backup_encryption.rs  backup_scheduler.rs  cache.rs  classification.rs  code_deploy.rs  code_deploy_scheduler.rs  cve_feed.rs  cve_scheduler.rs  facter.rs  git.rs  inventory_maintenance.rs  inventory_scheduler.rs  mod.rs  node_removal_scheduler.rs  notification.rs  puppet_ca.rs  puppetdb.rs  r10k.rs  rbac.rs  rbac_db.rs  repo_checker.rs  repo_checker_scheduler.rs  report_summary_scheduler.rs  reporting.rs  saml.rs  scheduler.rs  update_schedule_scheduler.rs
src/utils/: error.rs  mod.rs  validation.rs
tests/: cucumber.rs  integration_tests.rs
tests/common/: factories.rs  fixtures.rs  mocks.rs  mod.rs  test_app.rs
tests/features/: alerting.feature  authentication.feature  ca.feature  mod.rs  nodes.feature  (+4 more)
(+95 files in other folders)
