[package]
name = "openvox-webui"
version = "0.9.6"
edition = "2021"
authors = ["OpenVox Contributors"]
description = "Web interface for OpenVox infrastructure management"
license = "Apache-2.0"
repository = "https://github.com/openvoxproject/openvox-webui"
readme = "README.md"
keywords = ["openvox", "puppet", "infrastructure", "webui", "configuration-management"]
categories = ["web-programming", "config"]
default-run = "openvox-webui"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs", "set-header"] }

# Rate limiting
governor = "0.8"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# TLS support
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client for PuppetDB
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database (for local caching and configuration)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
base64 = "0.22"

# Configuration
config = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
once_cell = "1.20"
dotenvy = "0.15"
num_cpus = "1.16"
dirs = "5.0"
urlencoding = "2.1"
async-trait = "0.1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# PDF generation
printpdf = "0.7"

# Cron scheduling
cron = "0.15"

[dev-dependencies]
# Testing
cucumber = "0.21"
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "3.0", features = ["derive"] }
rstest = "0.23"
bytes = "1.9"

[[bin]]
name = "openvox-webui"
path = "src/main.rs"

[[bin]]
name = "run-scheduled-reports"
path = "src/bin/run-scheduled-reports.rs"

[[test]]
name = "cucumber"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
