[package]
name = "openvox-webui"
version = "0.19.0"
edition = "2021"
authors = ["OpenVox Contributors"]
description = "Web interface for OpenVox infrastructure management"
license = "Apache-2.0"
repository = "https://github.com/openvoxproject/openvox-webui"
readme = "README.md"
keywords = ["openvox", "puppet", "infrastructure", "webui", "configuration-management"]
categories = ["web-programming", "config"]
default-run = "openvox-webui"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs", "set-header"] }

# Rate limiting
governor = "0.10"
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# TLS support
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"

# HTTP client for PuppetDB
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Database (for local caching and configuration)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
base64 = "0.22"

# Configuration
config = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
regex = "1.12"
once_cell = "1.21"
dotenvy = "0.15"
num_cpus = "1.17"
dirs = "6.0"
urlencoding = "2.1"
async-trait = "0.1"
libc = "0.2"

# Validation
validator = { version = "0.20", features = ["derive"] }

# PDF generation
printpdf = "0.8"

# Cron scheduling
cron = "0.15"

# Git operations for code deploy
git2 = "0.20"

# SSH key parsing for public key extraction
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256", "p384", "std"] }

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Backup encryption and archiving
chacha20poly1305 = "0.10"
tar = "0.4"

# SAML 2.0 authentication
# Without xmlsec feature, no signature verification (development mode)
# For production with signature verification, install libxml2, xmlsec1 and enable xmlsec feature
samael = { version = "0.0.19", default-features = false }
flate2 = "1.1"

[dev-dependencies]
# Testing
cucumber = "0.22"
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "4.4", features = ["derive"] }
rstest = "0.26"
bytes = "1.11"

[[bin]]
name = "openvox-webui"
path = "src/main.rs"

[[bin]]
name = "run-scheduled-reports"
path = "src/bin/run-scheduled-reports.rs"

[[test]]
name = "cucumber"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
